feat(notifications): add RequestRespondedEvent support
- Introduced RequestRespondedEvent DTO
- Published Kafka event on reservation request status updates
- Extended Kafka producer configuration to support RequestRespondedEvent serialization
- Integrated event emission in updateStatus flow